tests/baselines/reference/parserComputedPropertyName25(strict=true).errors.txt
parserComputedPropertyName25.ts(3,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
parserComputedPropertyName25.ts(3,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName25.ts(3,11): error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'Number'.
parserComputedPropertyName25.ts(4,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName25.ts (4 errors) ====
    class C {
        // No ASI
        [e] = 0
        ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
         ~
!!! error TS2304: Cannot find name 'e'.
              ~
        [e2] = 1
    ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'Number'.
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }